--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -2,4 +2,5 @@ site_name: csse4011-docs
 nav:
     - Home: index.md
     - Getting Started: getting_started.md
+    - Tutorials: tutorials.md
 theme: readthedocs
