--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -3,4 +3,5 @@ nav:
     - Home: index.md
     - Getting Started: getting_started.md
     - Tutorials: tutorials.md
+    - MicroPython: mpy.md
 theme: readthedocs
